Tests supporting Java 11 + use EVERYONE_SET instead of EVERYONE_MODULE